# exam

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  today.txt
apps/students/: admin.py  models.py  urls.py  views.py
apps/students/migrations/: 0001_initial.py  0002_alter_answers_comment_alter_answers_score.py  0003_multiplechoicequestions.py  0004_answers_answered_exam.py  0005_alter_answers_answer.py
apps/students/tests/: conftest.py  test_models.py  test_views.py
apps/teachers/: admin.py  decorators.py  forms.py  mixin.py  models.py  urls.py  utils.py  views.py
apps/teachers/migrations/: 0001_initial.py  0002_exam_exam_type.py  0003_alter_exam_slug.py  0004_alter_option_is_answer.py  0005_exam_pass_code.py  0006_alter_exam_duration.py  0008_students.py  (+2 more)
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
homepage/: package-lock.json
homepage/src/: home.html  output.css  style.css
setup/: settings.py  urls.py
static/css/: theme.css
templates/: auth_base.html  index.html
templates/account/: email_confirm.html  login.html  logout.html  signup.html  teacher_signup.html  verification_sent.html
templates/partials/: options.html  questions.html
templates/students/: Already_submitted.html  already_written.html  student.html  success.html  time_check.html  time_check_late.html  write_essay.html  write_mc.html
templates/teachers/: create_essay_questions.html  create_exam.html  create_mm_questions.html  mark.html  mark_student.html  register_student.html  results.html  teacher.html
(+8 files in other folders)
