[tool.poetry]
name = "exam"
version = "0.1.0"
description = "An exam app which teachers can create exams and students can write the created exams"
authors = ["sosshi <symonmwenex@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.7.2"
certifi = "2023.11.17"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
coverage = "3.6"
cryptography = "41.0.7"
cssbeautifier = "1.14.11"
defusedxml = "0.7.1"
django = "5.0"
django-allauth = "0.58.2"
django-extensions = "3.2.3"
django-invitations = "2.1.0"
django-widget-tweaks = "1.5.0"
djlint = "1.34.0"
editorconfig = "0.12.3"
html-tag-names = "0.1.2"
html-void-elements = "0.1.0"
idna = "3.6"
jsbeautifier = "1.14.11"
json5 = "0.9.14"
oauthlib = "3.2.2"
pathspec = "0.11.2"
pycparser = "2.21"
pyjwt = "2.8.0"
python3-openid = "3.2.0"
pyyaml = "6.0.1"
regex = "2023.10.3"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
six = "1.16.0"
sqlparse = "0.4.4"
tomli = "2.0.1"
tqdm = "4.66.1"
typing-extensions = "4.8.0"
tzdata = "2023.3"
urllib3 = "2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
